2008-12-30  Guillem Jover  <guillem@debian.org>

	* lib/ehandle.c (badusage): Move function to ...
	* lib/myopt.c: ... here. Include <stdarg.h>.
	* lib/dpkg.h (badusage): Move declaration to ...
	* lib/myopt.h: ... here.
	* dpkg-split/split.c: Include <myopt.h>.

2008-12-30  Colin Watson  <cjwatson@ubuntu.com>

	* src/help.c (preexecscript): Call chdir after chroot.

2008-12-23  Guillem Jover  <guillem@debian.org>

	* lib/log.c (statusfd_send): Pass to write the remaining data, not
	the same initial buffer.

2008-12-08  Raphael Hertzog  <hertzog@debian.org>

	* scripts/Dpkg/Changelog.pm, scripts/dpkg-buildpackage.pl,
	scripts/dpkg-genchanges.pl, scripts/dpkg-gencontrol.pl,
	scripts/dpkg-source.pl: Also import the default exported functions
	of Dpkg::ErrorHandling and not only the unusual ones.

2008-12-08  Guillem Jover  <guillem@debian.org>

	* dpkg-deb/build.c (do_build): Mark strings for translation.
	* dpkg-deb/extract.c (extracthalf): Likewise.
	* dpkg-split/info.c (read_info): Likewise.
	* dpkg-split/join.c (reassemble): Likewise.
	* dpkg-split/queue.c (do_queue): Likewise.
	* dselect/pkglist.cc (packagelist::packagelist): Likewise.
	(packagelist::display): Likewise.
	* lib/log.c (statusfd_send): Likewise.
	* scripts/Dpkg/Source/Package/V1.pm (do_build): Likewise.
	* src/filesdb.c (ensure_packagefiles_available): Likewise.
	(ensure_statoverrides): Likewise.

2008-12-08  Guillem Jover  <guillem@debian.org>

	* dpkg-deb/extract.c (extracthalf): Improve internerr strings, and add
	the invalid value provoking the call.
	* dpkg-split/queue.c (discardsome): Likewise.
	* lib/dbmodify.c (modstatdb_init): Likewise.
	* lib/dump.c (varbufdependency): Likewise.
	* lib/parsehelp.c (varbufversion): Likewise.
	* lib/vercmp.c (versionsatisfied3): Likewise.
	* scripts/Dpkg/Source/Archive.pm (_add_entry): Likewise.
	* src/archives.c (tarobject, archivefiles): Likewise.
	* src/configure.c (deferred_configure, promptconfaction): Likewise.