@@ -1,3 +1,9 @@
+2009-01-04  Guillem Jover  <guillem@debian.org>
+
+	* dselect/main.cc (findintable, dme, refreshmenu): Make static.
+	* dselect/method.cc (sthfailed): Likewise.
+	* dselect/pkgtop.cc (pkgprioritystring): Likewise.
+
 2008-12-30  Guillem Jover  <guillem@debian.org>
 
 	* lib/ehandle.c (badusage): Move function to ...
